Added render functions

--- a/src/components/item-details/item-details.css
+++ b/src/components/item-details/item-details.css
@@ -1,7 +1,11 @@
-.person-details {
+.item-details {
   display: flex;
   flex-direction: row;
   padding: 1rem;
+}
+.item-details img {
+  width: 325px;
+  height: 380px;
 }
 
 .person-details .person-image {
