Added Context API, HOC, prop-types

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,7 +1,11 @@
-.mb2 {
-    margin-bottom: 20px;
+.button-row {
+  margin: 0 0 1rem 0;
 }
-.row {
-    margin-right: 0px;
-    margin-left: 0px;
+
+.button-row button {
+  margin-right: 1rem;
+}
+
+.stardb-app .row {
+  margin-bottom: 1rem;
 }
