--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,60 +1,76 @@
-@keyframes ldio-bdtrclzokm {
-  0% { transform: rotate(0) }
-  100% { transform: rotate(360deg) }
+@keyframes lds-double-ring {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
-.ldio-bdtrclzokm div { box-sizing: border-box!important }
-.ldio-bdtrclzokm > div {
-  position: absolute;
-  width: 138.72px;
-  height: 138.72px;
-  top: 32.64px;
-  left: 32.64px;
-  border-radius: 50%;
-  border: 12.24px solid #000;
-  border-color: #93dbe9 transparent #93dbe9 transparent;
-  animation: ldio-bdtrclzokm 1.5384615384615383s linear infinite;
+
+@-webkit-keyframes lds-double-ring {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
-.ldio-bdtrclzokm > div:nth-child(2) { border-color: transparent }
-.ldio-bdtrclzokm > div:nth-child(2) div {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform: rotate(45deg);
+@keyframes lds-double-ring_reverse {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
 }
-.ldio-bdtrclzokm > div:nth-child(2) div:before, .ldio-bdtrclzokm > div:nth-child(2) div:after { 
-  content: "";
-  display: block;
-  position: absolute;
-  width: 12.24px;
-  height: 12.24px;
-  top: -12.24px;
-  left: 51px;
-  background: #93dbe9;
-  border-radius: 50%;
-  box-shadow: 0 126.48px 0 0 #93dbe9;
+@-webkit-keyframes lds-double-ring_reverse {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
 }
-.ldio-bdtrclzokm > div:nth-child(2) div:after { 
-  left: -12.24px;
-  top: 51px;
-  box-shadow: 126.48px 0 0 0 #93dbe9;
+
+.lds-css {
+  margin: 0 auto;
 }
-.loadingio-spinner-dual-ring-8ldk0g2tj56 {
-  width: 204px;
-  height: 204px;
-  display: inline-block;
-  overflow: hidden;
-  background: none;
-}
-.ldio-bdtrclzokm {
-  width: 100%;
-  height: 100%;
+
+.lds-double-ring {
   position: relative;
-  transform: translateZ(0) scale(1);
-  backface-visibility: hidden;
-  transform-origin: 0 0; /* see note above */
 }
-.ldio-bdtrclzokm div { box-sizing: content-box; }
-.loading-box {
-  margin-right: auto;
-  margin-left: auto;
+.lds-double-ring div {
+  position: absolute;
+  width: 160px;
+  height: 160px;
+  top: 20px;
+  left: 20px;
+  border-radius: 50%;
+  border: 8px solid #000;
+  border-color: #3d7ec0 transparent #3d7ec0 transparent;
+  -webkit-animation: lds-double-ring 1.5s linear infinite;
+  animation: lds-double-ring 1.5s linear infinite;
+}
+.lds-double-ring div:nth-child(2) {
+  width: 140px;
+  height: 140px;
+  top: 30px;
+  left: 30px;
+  border-color: transparent #cc4545 transparent #cc4545;
+  -webkit-animation: lds-double-ring_reverse 1.5s linear infinite;
+  animation: lds-double-ring_reverse 1.5s linear infinite;
+}
+.lds-double-ring {
+  width: 77px !important;
+  height: 77px !important;
+  -webkit-transform: translate(-38.5px, -38.5px) scale(0.385) translate(38.5px, 38.5px);
+  transform: translate(-38.5px, -38.5px) scale(0.385) translate(38.5px, 38.5px);
 }
